Mon May  5 12:28:06 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Useful to have a full build system get gdb by dfault

Fri May  2 19:46:30 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Network_Adapters_Test.cpp:
          Change order of deletion to avoid a clean up problem for
          some build configurations.

Fri May  2 14:28:06 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/config-macosx-leopard.h:
          MacOS supports ICMP.

        * tests/Bug_4055_Regression_Test.cpp:
        * tests/Message_Block_Large_Copy_Test.cpp:
        * tests/Monotonic_Message_Queue_Test.cpp:
        * tests/Network_Adapters_Test.cpp:
          clean up some valgrind leak reports.

Tue Apr 29 15:08:45 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Removed invalid first line, add Id in footer

Tue Apr 22 08:29:26 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/ACE+TAO+CIAO+DAnCE.json:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * debian/debian.changelog:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Make x.2.6 public

Tue Apr 22 08:44:41 CEST 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.6 released.

Fri Apr 18 06:49:06 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
          Fix executable test for targets with mapped root.

        * bin/PerlACE/TestTarget.pm:
          Add IP_ADDRESS configuration option and auto determination.

        * bin/PerlACE/TestTarget_Android.pm:
          Small cleanup.

Fri Apr 11 21:26:28 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/SSL/SSL_Context.cpp:
          Scoreboard cleanup. The directory add feature discussed in
          bug 3337 still doesn't work on windows.
