@@ -1,3 +1,8 @@
+Mon May  5 13:27:29 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tests/Network_Adapters_Test.cpp:
+          Another order of clean up fix to address scoreboard issues.
+
 Mon May  5 12:28:06 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * docs/bczar/bczar.html:
